--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,10 @@
 message : This message is from config from github
 
-server.port : 8081
-spring.application.name : config-server-example
 
-#to include all end points
-management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:mysql://localhost:3306/nexturn
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=N@man123
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
